--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <section class="bonus">
                     <p class="bonus_gift">Дарим</p>
                     <div class="bonus_effect">
-                        <img class="bonus_effect--likes3" src="/src/img/ЛАЙКИ_copy.png" alt="">
-                        <img class="bonus_effect--likes4" src="/src/img/ЛАЙКИ_copy.png" alt="">
+                        <img class="bonus_effect--likes3" src="src/img/ЛАЙКИ_copy.png" alt="">
+                        <img class="bonus_effect--likes4" src="src/img/ЛАЙКИ_copy.png" alt="">
                         <p class="bonus_effect--likes1">ЛАЙКИ</p>
                         <p class="bonus_effect--likes2">ЛАЙКИ</p>
                     </div>
